Fixed note form not showing

--- a/app/assets/stylesheets/session_notes.scss
+++ b/app/assets/stylesheets/session_notes.scss
@@ -6,35 +6,8 @@
 /***********************************************************
 * Home CSS Stylesheet Document 
 * Contains styling specific to the home page
-* Written by: Rolando Medrano
+* Written by: Rolando MEDRANo
 ************************************************************/
-
-
-
-@import "http://fonts.googleapis.com/css?family=Raleway";
-* { box-sizing: border-box; }
-
-h1{ margin: 20px; }
-
-#newNote { 
-  -webkit-user-select: none; /* Chrome/Safari */        
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+ */
-  padding: 10px, 16px;
-  font-size: 25px;
-  width: 150px; 
-  height: 50px;
-  border-radius: 6px;
-  background: #5cb85c;
-  color: white;
-  text-align: center;
-  line-height: 2.0;
-  font-weight: 400;
-  cursor: pointer;
-}
-
-#newNote:hover { background: #666; }
-#newNote:active { background: #444; }
 
 #newNoteForm { 
   display: none;
